Fixed the unified-CI github workflow to generate Prisma so the build can import the client

--- a/.github/workflows/unified-CI.yml
+++ b/.github/workflows/unified-CI.yml
@@ -38,6 +38,10 @@ jobs:
               working-directory: ./resume_evaluator
               run: npm audit --production --audit-level=moderate
             
+            - name: Generate Prisma
+              working-directory: ./resume_evaluator
+              run: npm run db:deploy
+
             - name: Build Next.JS app
               working-directory: ./resume_evaluator
               run: npm run build
