Fixed bugs related to authentication using OAuth and credentials, UI bugs (loading animation of jobs and layout), created CI/CD pipeline for Google Cloud and fixed the staging CI/CD pipeline in the GitHub workflow

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -36,7 +36,7 @@ jobs:
               run: npm audit --production --audit-level=moderate
 
             - name: Build Next.JS webapp
-              run: docker build . -t resume-evaluator-prod -f ../Dockerfile.prod
+              run: docker build . -t resume-evaluator-prod -f ./Dockerfile.prod
             
             # Placeholder for Deployment
             # - name: Deploy to Staging
