--- a/.github/workflows/unified-CI.yml
+++ b/.github/workflows/unified-CI.yml
@@ -25,6 +25,10 @@ jobs:
             - name: Install dependencies
               working-directory: ./resume_evaluator
               run: npm install
+
+            - name: Attempt non-breaking fixes
+              working-directory: ./resume_evaluator
+              run: npm audit fix
             
             - name: Run tests
               working-directory: ./resume_evaluator
