--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -22,6 +22,10 @@ jobs:
             - name: Install Node.js dependencies
               working-directory: ./resume_evaluator
               run: npm install
+              
+            - name: Attempt non-breaking fixes
+              working-directory: ./resume_evaluator
+              run: npm install
 
             - name: Run Node.js tests
               working-directory: ./resume_evaluator
