--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -43,14 +43,15 @@ jobs:
               run: docker build . -t resume-evaluator-prod -f ./Dockerfile.prod
 
             - name: Authenticate with Google Cloud
-              uses: google-github-actions/auth@v1
+              uses: google-github-actions/auth@v2
               with:
                   credentials_json: ${{ secrets.GCP_DEPLOY_S }}
 
             - name: Set up Google Cloud SDK
-              uses: google-github-actions/auth@v1
-              with:
-                  project_id: ${{ secrets.GCP_PROJECT_ID }}
+              uses: google-github-actions/setup-gcloud@v2
+
+            - name: Verify authentication
+              run: gcloud auth list
 
             - name: Configure Docker to push to Google Artifact Registry
               run: gcloud auth configure-docker ${{ secrets.GCP_LOCATION }}-docker.pkg.dev
