--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -65,7 +65,7 @@ jobs:
             - name: Deploy to Google Cloud Run
               run: |
                 gcloud run deploy resume-evaluator-prod \
-                  --image "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest" \
+                  --image "$(echo "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest" | tr -d '[:space:]')" \
                   --platform managed \
                   --region ${{ secrets.GCP_LOCATION }} \
                   --port 8080 \
