--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -19,81 +19,77 @@ jobs:
             - name: Set up Node.js
               uses: actions/setup-node@v4
               
-            - name: Test
-              run: |
-                echo "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest"
-                echo "${{ secrets.GCP_PROJECT_ID }}Test"
-            # - name: Install Node.js dependencies
-            #   working-directory: ./resume_evaluator
-            #   run: npm install
+            - name: Install Node.js dependencies
+              working-directory: ./resume_evaluator
+              run: npm install
               
-            # - name: Attempt non-breaking fixes
-            #   working-directory: ./resume_evaluator
-            #   run: npm audit fix
+            - name: Attempt non-breaking fixes
+              working-directory: ./resume_evaluator
+              run: npm audit fix
 
-            # - name: Run Node.js tests
-            #   working-directory: ./resume_evaluator
-            #   run: npm run test
+            - name: Run Node.js tests
+              working-directory: ./resume_evaluator
+              run: npm run test
             
-            # - name: Lint Node.js code
-            #   working-directory: ./resume_evaluator
-            #   run: npm run lint
+            - name: Lint Node.js code
+              working-directory: ./resume_evaluator
+              run: npm run lint
 
-            # - name: Node.js security audit
-            #   working-directory: ./resume_evaluator
-            #   run: npm audit --production --audit-level=moderate
+            - name: Node.js security audit
+              working-directory: ./resume_evaluator
+              run: npm audit --production --audit-level=moderate
 
-            # - name: Build Next.JS webapp
-            #   run: docker build . -t resume-evaluator-prod -f ./Dockerfile.prod
+            - name: Build Next.JS webapp
+              run: docker build . -t resume-evaluator-prod -f ./Dockerfile.prod
 
-            # - name: Authenticate with Google Cloud
-            #   uses: google-github-actions/auth@v2
-            #   with:
-            #       credentials_json: ${{ secrets.GCP_DEPLOY_S }}
+            - name: Authenticate with Google Cloud
+              uses: google-github-actions/auth@v2
+              with:
+                  credentials_json: ${{ secrets.GCP_DEPLOY_S }}
 
-            # - name: Set up Google Cloud SDK
-            #   uses: google-github-actions/setup-gcloud@v2
+            - name: Set up Google Cloud SDK
+              uses: google-github-actions/setup-gcloud@v2
 
-            # - name: Verify authentication
-            #   run: gcloud auth list
+            - name: Verify authentication
+              run: gcloud auth list
 
-            # - name: Configure Docker to push to Google Artifact Registry
-            #   run: gcloud auth configure-docker ${{ secrets.GCP_LOCATION }}-docker.pkg.dev
+            - name: Configure Docker to push to Google Artifact Registry
+              run: gcloud auth configure-docker ${{ secrets.GCP_LOCATION }}-docker.pkg.dev
 
-            # - name: Build and push Docker image
-            #   run: |
-            #     IMAGE_URI="$(echo "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest" | tr -d '[:space:]')"
-            #     docker build . -t "$IMAGE_URI" -f ./Dockerfile.prod
-            #     docker push "$IMAGE_URI"
+            - name: Build and push Docker image
+              run: |
+                IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest"
+                docker build . -t "$IMAGE_URI" -f ./Dockerfile.prod
+                docker push "$IMAGE_URI"
 
-            # - name: Deploy to Google Cloud Run
-            #   run: |
-            #     gcloud run deploy resume-evaluator-prod \
-            #       --image "$(echo "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest" | tr -d '[:space:]')" \
-            #       --platform managed \
-            #       --region ${{ secrets.GCP_LOCATION }} \
-            #       --port 8080 \
-            #       --memory 2Gi \
-            #       --cpu 1 \
-            #       --max-instances 2 \
-            #       --project ${{ secrets.GCP_PROJECT_ID }} \
-            #       --service-account ${{ secrets.GCP_SA }} \
-            #       --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL }} \
-            #       --set-env-vars BASE_PATH=${{ secrets.BASE_PATH }} \
-            #       --set-env-vars AUTH_URL=${{ secrets.AUTH_URL }} \
-            #       --set-env-vars AUTH_SECRET=${{ secrets.AUTH_SECRET }} \
-            #       --set-env-vars GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID_GITHUB }} \
-            #       --set-env-vars GITHUB_CLIENT_SECRET=${{ secrets.CLIENT_SECRET_GITHUB }} \
-            #       --set-env-vars GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-            #       --set-env-vars GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-            #       --set-env-vars LINKEDIN_CLIENT_ID=${{ secrets.LINKEDIN_CLIENT_ID }} \
-            #       --set-env-vars LINKEDIN_CLIENT_SECRET=${{ secrets.LINKEDIN_CLIENT_SECRET }} \
-            #       --set-env-vars SMTP_SERVER_USERNAME=${{ secrets.SMTP_SERVER_USERNAME }} \
-            #       --set-env-vars SMTP_SERVER_PASSWORD=${{ secrets.SMTP_SERVER_PASSWORD }} \
-            #       --set-env-vars SMTP_SERVER_HOST=${{ secrets.SMTP_SERVER_HOST }} \
-            #       --set-env-vars GPT_API_KEY=${{ secrets.GPT_API_KEY }} \
-            #       --set-env-vars PINATA_API_KEY=${{ secrets.PINATA_API_KEY }} \
-            #       --set-env-vars PINATA_URL=${{ secrets.PINATA_URL }} \
+            - name: Deploy to Google Cloud Run
+              run: |
+                gcloud run deploy resume-evaluator-prod \
+                  --image "${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest" \
+                  --platform managed \
+                  --region ${{ secrets.GCP_LOCATION }} \
+                  --port 8080 \
+                  --memory 2Gi \
+                  --cpu 1 \
+                  --max-instances 2 \
+                  --project ${{ secrets.GCP_PROJECT_ID }} \
+                  --service-account ${{ secrets.GCP_SA }} \
+                  --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL }} \
+                  --set-env-vars BASE_PATH=${{ secrets.BASE_PATH }} \
+                  --set-env-vars AUTH_URL=${{ secrets.AUTH_URL }} \
+                  --set-env-vars AUTH_SECRET=${{ secrets.AUTH_SECRET }} \
+                  --set-env-vars GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID_GITHUB }} \
+                  --set-env-vars GITHUB_CLIENT_SECRET=${{ secrets.CLIENT_SECRET_GITHUB }} \
+                  --set-env-vars GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
+                  --set-env-vars GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
+                  --set-env-vars LINKEDIN_CLIENT_ID=${{ secrets.LINKEDIN_CLIENT_ID }} \
+                  --set-env-vars LINKEDIN_CLIENT_SECRET=${{ secrets.LINKEDIN_CLIENT_SECRET }} \
+                  --set-env-vars SMTP_SERVER_USERNAME=${{ secrets.SMTP_SERVER_USERNAME }} \
+                  --set-env-vars SMTP_SERVER_PASSWORD=${{ secrets.SMTP_SERVER_PASSWORD }} \
+                  --set-env-vars SMTP_SERVER_HOST=${{ secrets.SMTP_SERVER_HOST }} \
+                  --set-env-vars GPT_API_KEY=${{ secrets.GPT_API_KEY }} \
+                  --set-env-vars PINATA_API_KEY=${{ secrets.PINATA_API_KEY }} \
+                  --set-env-vars PINATA_URL=${{ secrets.PINATA_URL }} \
 
     ############################ 
     # Activate in later stages #
