--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -66,31 +66,31 @@ jobs:
               run: |
                 IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest"
                 gcloud run deploy resume-evaluator-prod \
-                  --image "$IMAGE_URI" \
-                  --platform managed \
-                  --region ${{ secrets.GCP_LOCATION }} \
-                  --port 8080 \
-                  --memory 2Gi \
-                  --cpu 1 \
-                  --max-instances 2 \
-                  --project ${{ secrets.GCP_PROJECT_ID }} \
-                  --service-account ${{ secrets.GCP_SA }} \
-                  --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL }} \
-                  --set-env-vars BASE_PATH=${{ secrets.BASE_PATH }} \
-                  --set-env-vars AUTH_URL=${{ secrets.AUTH_URL }} \
-                  --set-env-vars AUTH_SECRET=${{ secrets.AUTH_SECRET }} \
-                  --set-env-vars GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID_GITHUB }} \
-                  --set-env-vars GITHUB_CLIENT_SECRET=${{ secrets.CLIENT_SECRET_GITHUB }} \
-                  --set-env-vars GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
-                  --set-env-vars GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
-                  --set-env-vars LINKEDIN_CLIENT_ID=${{ secrets.LINKEDIN_CLIENT_ID }} \
-                  --set-env-vars LINKEDIN_CLIENT_SECRET=${{ secrets.LINKEDIN_CLIENT_SECRET }} \
-                  --set-env-vars SMTP_SERVER_USERNAME=${{ secrets.SMTP_SERVER_USERNAME }} \
-                  --set-env-vars SMTP_SERVER_PASSWORD=${{ secrets.SMTP_SERVER_PASSWORD }} \
-                  --set-env-vars SMTP_SERVER_HOST=${{ secrets.SMTP_SERVER_HOST }} \
-                  --set-env-vars GPT_API_KEY=${{ secrets.GPT_API_KEY }} \
-                  --set-env-vars PINATA_API_KEY=${{ secrets.PINATA_API_KEY }} \
-                  --set-env-vars PINATA_URL=${{ secrets.PINATA_URL }} \
+                  --image="$IMAGE_URI" \
+                  --platform=managed \
+                  --region=${{ secrets.GCP_LOCATION }} \
+                  --port=8080 \
+                  --memory=2Gi \
+                  --cpu=1 \
+                  --max-instances=2 \
+                  --project=${{ secrets.GCP_PROJECT_ID }} \
+                  --service-account=${{ secrets.GCP_SA }} \
+                  --set-env-vars=DATABASE_URL=${{ secrets.DATABASE_URL }} \
+                  --set-env-vars=BASE_PATH=${{ secrets.BASE_PATH }} \
+                  --set-env-vars=AUTH_URL=${{ secrets.AUTH_URL }} \
+                  --set-env-vars=AUTH_SECRET=${{ secrets.AUTH_SECRET }} \
+                  --set-env-vars=GITHUB_CLIENT_ID=${{ secrets.CLIENT_ID_GITHUB }} \
+                  --set-env-vars=GITHUB_CLIENT_SECRET=${{ secrets.CLIENT_SECRET_GITHUB }} \
+                  --set-env-vars=GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }} \
+                  --set-env-vars=GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }} \
+                  --set-env-vars=LINKEDIN_CLIENT_ID=${{ secrets.LINKEDIN_CLIENT_ID }} \
+                  --set-env-vars=LINKEDIN_CLIENT_SECRET=${{ secrets.LINKEDIN_CLIENT_SECRET }} \
+                  --set-env-vars=SMTP_SERVER_USERNAME=${{ secrets.SMTP_SERVER_USERNAME }} \
+                  --set-env-vars=SMTP_SERVER_PASSWORD=${{ secrets.SMTP_SERVER_PASSWORD }} \
+                  --set-env-vars=SMTP_SERVER_HOST=${{ secrets.SMTP_SERVER_HOST }} \
+                  --set-env-vars=GPT_API_KEY=${{ secrets.GPT_API_KEY }} \
+                  --set-env-vars=PINATA_API_KEY=${{ secrets.PINATA_API_KEY }} \
+                  --set-env-vars=PINATA_URL=${{ secrets.PINATA_URL }} \
 
     ############################ 
     # Activate in later stages #
