--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -58,13 +58,13 @@ jobs:
 
             - name: Build and push Docker image
               run: |
-                IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest"
+                IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY)/${{ secrets.GCP_AR }}:latest"
                 docker build . -t "$IMAGE_URI" -f ./Dockerfile.prod
                 docker push "$IMAGE_URI"
 
             - name: Deploy to Google Cloud Run
               run: |
-                IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY):latest"
+                IMAGE_URI="${{ secrets.GCP_LOCATION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/cloud-run-source-deploy/$(basename $GITHUB_REPOSITORY)/${{ secrets.GCP_AR }}:latest"
                 gcloud run deploy resume-evaluator-prod \
                   --image="$IMAGE_URI" \
                   --platform=managed \
