--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -36,7 +36,7 @@ jobs:
               working-directory: ./resume_evaluator
               run: npm audit --production --audit-level=moderate
 
-            - name: Build Next.JS webapp
+            - name: Build Next.JS webapp with Docker
               run: docker build . -t resume-evaluator-prod -f ./Dockerfile.prod
 
             - name: Authenticate with Google Cloud
